--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: #141414; 
     font-family: 'Mulish', sans-serif;
     overflow-x: hidden;
+    color: white;
       }
   header {
     background-color: #141414;
